# mlir-vta

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
docs/: DESIGN_cn.md  README.md
docs/plans/: 2026-06-02-mlir-vta-phase1-gemm.md  phase1-gemm.md  phase2-linalg-entry.md  phase3-alu-lowering.md  phase3-fsim-nn-2layer.md  phase3-generalized-gemm.md  phase3-multilayer-dram-allocation.md  phase3-overfit-strategy1.md  phase3-overfit-strategy234.md  phase4-increment-FG.md  phase4-onnx-frontend.md  spike-generalized-gemm-notes.md
docs/specs/: phase1-gemm-design.md  phase2-linalg-entry-design.md  phase3-generalized-gemm-design.md  phase4-onnx-frontend-design.md
include/mlir-vta/: VTAGemmLayout.h  VTALayerUtils.h
lib/Transforms/: CMakeLists.txt  ConvertLinalgToVTA.cpp  LowerVTAAlu.cpp  LowerVTAGemm.cpp  LowerVTAMaxPool.cpp  VTADramAllocation.cpp  VTASemaphoreDerive.cpp
scripts/: emit_dependency_csv.py  fsim_reference_utils.py  gen_conv_relu_debug.py  gen_conv_relu_reference.py  gen_lenet5_mini.py  gen_lenet5_mini_reference.py  gen_qadd_two_mul.py  gen_qadd_two_mul_reference.py  gen_qconcat_reference.py  gen_qconcat_two_branch.py  gen_two_qlinearconv_small.py  make_golden.sh  make_golden_conv_relu_upstream.sh  make_golden_gemm.sh  make_golden_maxpool_upstream.sh  make_golden_onnx_qconv.sh  make_golden_qconv_upstream.sh  make_golden_qlinearmul_upstream.sh  make_golden_relu_upstream.sh  onnx_conv_relu_bridge.py  onnx_lenet5_mini_bridge.py  onnx_maxpool_bridge.py  onnx_qadd_two_mul_bridge.py  onnx_qconcat_two_branch_bridge.py  onnx_qconv_bridge.py  onnx_qlinearmul_bridge.py  onnx_relu_bridge.py  run_fsim.sh  run_fsim_gemm.sh  run_fsim_linalg.sh  run_fsim_linalg_32x32.sh  run_fsim_nn_2layer.sh  run_fsim_overfit.sh  run_onnx_conv_relu.sh  run_onnx_lenet5.sh  run_onnx_maxpool.sh  run_onnx_qadd_two_mul.sh  run_onnx_qconcat.sh  run_onnx_qconv.sh  run_onnx_qconv_colpad.sh  (+5 more)
tools/vta-opt/: CMakeLists.txt  vta-opt.cpp
tools/vta-translate/: CMakeLists.txt  vta-translate.cpp
(+77 files in other folders)
